--- a/src/aura/KanbanBoard/KanbanBoard.cmp
+++ b/src/aura/KanbanBoard/KanbanBoard.cmp
@@ -4,30 +4,20 @@
 
 <aura:component description="KanbanBoard" controller="KanbanBoardController"
                 implements="lightning:actionOverride, force:hasRecordId">
-    <aura:attribute name="record" type="Object" />
     <aura:attribute name="simpleRecord" type="Object" />
-    <aura:attribute name="recordError" type="String" />
-    <force:recordData aura:id="record"
-                      layoutType="FULL"
-                      recordId="{!v.recordId}"
-                      targetError="{!v.recordError}"
-                      targetRecord="{!v.record}"
-                      targetFields ="{!v.simpleRecord}"
-                      mode="EDIT"/>
-    <aura:attribute name="recordId" type="Id" />
-    <aura:attribute name="kanbanColumnList" type="KanbanColumn__c[]"/>
 
-    <aura:registerEvent type="c:ShareKanbanColumnsEvent" name="ShareKanbanColumnsEvent"/>
 
-    <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
     <aura:handler name="RenameKanbanBoardEvent" action="{! c.handleRenameKanbanBoardEvent }"
                   event="c:RenameKanbanBoardEvent"/>
 
+
+    <force:recordData aura:id="record"
+                      layoutType="FULL"
+                      recordId="{!v.recordId}"
+                      targetFields ="{!v.simpleRecord}"
+                      mode="EDIT"/>
     <div>
         <c:KanbanBoardInfo kanbanBoard = "{! v.simpleRecord }" />
-        <c:KanbanColumnList kanbanColumnList = "{! v.kanbanColumnList }"
-                            kanbanBoardId="{! v.recordId }" />
-
-        <!--<c:TestModalWindow />-->
+        <c:KanbanColumnList kanbanBoardId="{! v.recordId }" />
     </div>
 </aura:component>
