--- a/src/aura/KanbanColumn/KanbanColumn.cmp
+++ b/src/aura/KanbanColumn/KanbanColumn.cmp
@@ -2,7 +2,7 @@
  - Created by Vladyslav Lyfar on 04.10.2018.
  -->
 
-<aura:component description="KanbanColumn" controller="KanbanColumnController">
+<aura:component description="KanbanColumn" controller="KanbanColumnController" extends="c:Column">
     <aura:attribute name="kanbanColumn" type="KanbanColumn__c" />
     <aura:attribute name="kanbanCards" type="KanbanCard__c[]"/>
     <aura:attribute name="isRenameFormOpened" type="Boolean" default="false" />
