--- a/src/aura/KanbanCardDetails/KanbanCardDetails.css
+++ b/src/aura/KanbanCardDetails/KanbanCardDetails.css
@@ -19,3 +19,52 @@
 .THIS .KanbanCardDetails__toggle-btn:hover {
     opacity: 1;
 }
+.THIS .KanbanCardDetails-attachments-list__item-cover:first-of-type {
+    padding-left: 0;
+}
+.THIS .KanbanCardDetails-attachments-list__item {
+    text-align: center;
+    background-color: #f4f6f9;
+    padding: 1rem;
+    border: 1px solid #d8dde6;
+    font-size: 2rem;
+    cursor: pointer;
+    position: relative;
+}
+.THIS .KanbanCardDetails-attachments-list__item:hover .KanbanCardDetails-attachments-list__remove-btn {
+    display: block;
+}
+.THIS .KanbanCardDetails-attachments-list__item:hover .KanbanCardDetails-attachments-list__view-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.THIS .KanbanCardDetails-attachments-list__remove-btn {
+    background: red;
+    border-radius: 100%;
+    color: #fff;
+    position: absolute;
+    top: -1rem;
+    right: -1rem;
+    display: none;
+}
+.THIS .KanbanCardDetails-attachments-list__view-link {
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0,0,0,.8);
+    font-size: .8rem;
+    text-decoration: none;
+    color: #fff;
+    display: none;
+}
+.THIS .KanbanCardDetails-attachments-list__remove-btn * {
+    padding: 0;
+    margin: 0;
+    line-height: 0;
+}
+.THIS .KanbanCardDetails-attachments-list__remove-btn .slds-button__icon {
+    position: relative;
+    top: -4px
+}
