--- a/src/aura/callbackHandler/callbackHandler.cmp
+++ b/src/aura/callbackHandler/callbackHandler.cmp
@@ -3,7 +3,12 @@
  -->
 
 <aura:component description="callbackHandler" controller="AuthorizationController">
+    <aura:attribute name="message" type="String"/>
 
     <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
+
+    <div class="message">
+        {! v.message }
+    </div>
 
 </aura:component>
